# smartfan

./: Cargo.toml  LICENSE.txt  README.md  install.sh
.cargo/: config.toml
.github/workflows/: build.yml
scripts/: HR650X.yaml  build.sh  config.yaml  hr650x_auto_fan.py  install.bat  install.sh  setup.iss  show.sh  start_with_screen.sh  安装指南.txt
src/: config.rs  constants.rs  fan.rs  lib.rs  main.rs  sensor.rs
src/tui/: app.rs  crossterm.rs  mod.rs  ui.rs
