[package]
name = "smartfan"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8.5"
tokio = { version = "1.39.2", features = [
  "rt",
  "macros",
  "time",
  "rt-multi-thread",
] }
ratatui = "0.29.0"
crossterm = "0.28.1"
argh = "0.1.13"


[build]
target = ["x86_64-unknown-linux-musl", "x86_64-pc-windows-gnu", "x86_64-apple-darwin"]
