[package]
name = "smartfan"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8.5"
tokio = { version = "1.39.2", features = [
  "rt",
  "macros",
  "time",
  "rt-multi-thread",
  "signal",
  "sync",
] }
ratatui = "0.29.0"
crossterm = "0.28.1"
argh = "0.1.13"
log = "0.4.26"
simple_logger = "5.0.0"
derive_more = { version = "2.0.1", features = ["display"] }
chrono = "0.4.40"


[build]
target = ["x86_64-unknown-linux-musl", "x86_64-pc-windows-gnu", "x86_64-apple-darwin"]
